--- a/css/global/global.css
+++ b/css/global/global.css
@@ -3,6 +3,7 @@
   padding: 0;
   box-sizing: border-box;
   scroll-behavior: smooth;
+  font-family: 'Fira Sans', sans-serif;
 }
 
 section.padding {
