--- a/css/sections/formacao.css
+++ b/css/sections/formacao.css
@@ -40,13 +40,13 @@
 }
 
 .formacao-cursos li.andamento::before {
-  content: url(/img/relogio.svg);
+  content: url(/wp-content/themes/osamuelvieira/img/relogio.svg);
   margin-right: 10px;
   vertical-align: middle;
 }
 
 .formacao-cursos li.concluido::before {
-  content: url(/img/check.svg);
+  content: url(/wp-content/themes/osamuelvieira/img/check.svg);
   margin-right: 10px;
   vertical-align: middle;
 }
