--- a/style.css
+++ b/style.css
@@ -28,3 +28,4 @@ Use it to make something cool, have fun, and share what you've learned with othe
 
 /* Posts */
 @import 'css/paginas/posts/listagem-posts.css';
+@import 'css/paginas/posts/single-post.css';
