Ajuste na listagem de posts mobile

--- a/css/paginas/posts/listagem-posts.css
+++ b/css/paginas/posts/listagem-posts.css
@@ -30,7 +30,10 @@
     flex-direction: column;
     gap: 10px;
   }
-  .post-img-destaque,
+  .post-img-destaque {
+    width: 100%;
+  }
+
   .post-container img {
     width: 100%;
   }
